feat(slots,pr): слот закреплён за задачей + CLOSED/closeTask; PR-комментарий возвращает задачу в работу
Слоты:
- opencode.slots: 10; слот закрепляется за задачей (OpenCodeSessionPool.acquireForTask/
  releaseForTask) и освобождается ТОЛЬКО при CLOSED — узлы больше не освобождают его по узлу
- ActiveTaskRegistry: статус CLOSED + markClosed
- TaskLauncher.close(taskId, chatId): RUNNING — прервать ран (отмена), затем CLOSED + освободить слот
- MCP-инструмент closeTask для оркестратора
- restartTask переписан: теперь только создание НОВОЙ задачи из контекста старой (priorTaskId)

PR-комментарии:
- PrCommentMonitor не создаёт pr-*-задачу: находит исходную задачу по ветке PR и возвращает её
  в работу (TaskLauncher.rework — перезапуск с аналитика с добавленными вводными; та же задача)
- тесты: PrCommentMonitorTest, TaskLauncherReworkTest